added links to html but wont link to the other projects

--- a/extra-credit/index.html
+++ b/extra-credit/index.html
@@ -22,20 +22,21 @@
       <nav class="navbar navbar-expand-md navbar-light bg-light" sticky-top>
           <a class="mr-auto p-2 navbar-brand" href="#">JKP</a>
           <button class="navbar-toggler" type="button" data-toggle="collapse" 
-          data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+          data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="true" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
 
           <div class="p-2 collapse navbar-collapse" id="navbarSupportedContent" >
             <ul class="navbar-nav ml-auto">
               <li class="nav-item active">
-                <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+                <a class="nav-link" href="index.html">Home <span class="sr-only">(current)</span></a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#">About</a>
+                <a class="nav-link" href="">About</a>
               </li>
               <li class="nav-item dropdown">
-                <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                <a class="nav-link dropdown-toggle" href="../04week/tomorrows-technology/" href="../04week/welcome-to-our-site/"
+                id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                   Projects
                 </a>
               </li>
@@ -138,10 +139,10 @@
   <div class="row padding">
       <div class="col-md-4">
         <div class="card">
-          <img src="./img/tomorrows technology.png" alt="Tommorrows technology" class="card-img-top">
+          <img src="./img/tomorrows technology.png"  alt="Tommorrows technology" class="card-img-top">
           <div class="card-body">
             <h4 class="card-title">Tommorrows Technology</h4>
-            <!-- <a href="#"></a> -->
+            <a href="../04week/tomorrows-technology/index.html"></a>
           </div>
         </div>
       </div>
@@ -150,7 +151,7 @@
             <img src="./img/welcome to our site copy.png" alt="Welcome to our Site" class="card-img-top">
             <div class="card-body">
               <h4 class="card-title">Welcome to our site</h4>
-              <!-- <a href="#"></a> -->
+              <a href="../04week/welcome-to-our-site/index.html"></a>
             </div>
           </div>
         </div>
