finished the final assinmentsorry for taking forever

--- a/extra-credit/index.html
+++ b/extra-credit/index.html
@@ -22,7 +22,7 @@
       <nav class="navbar navbar-expand-md navbar-light bg-light" sticky-top>
           <a class="mr-auto p-2 navbar-brand" href="#">JKP</a>
           <button class="navbar-toggler" type="button" data-toggle="collapse" 
-          data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="true" aria-label="Toggle navigation">
+          data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
 
@@ -53,7 +53,7 @@
 
 
 
-    <div class="header border">
+    <div class="header">
       <div class="title border2">
         <h1>Jessica K. Pena</h1>
         <h3>Junior Web Developer</h3>
@@ -64,7 +64,7 @@
 
 
 <div class="container-fluid padding">
-    <div class=" row about text-center border">
+    <div class=" row about text-center">
       <div class="col-12">
         <h1 class="display-4">About</h1>
       </div>  
@@ -128,14 +128,14 @@
 
 
 <div class="container-fluid padding">
-    <div class="work row welcome text-center border">
+    <div class="work row welcome text-center">
       <div class="col-12">
           <h1 class="display-4">Projects</h1>
       </div>
       <hr>
     </div>
 </div>
-<div class="container-fluid padding">
+<div class="container-fluid projects padding">
   <div class="row padding">
       <div class="col-md-4">
         <div class="card">
@@ -184,6 +184,7 @@
           <div class="col-sm-12">
             <hr class="light">
             <h4>Contact Me</h4>
+            <hr class="light">
             <p>c - 210-683-9294</p>
             <p>penajessica123@yahoo.com</p>
             <p>Austin, TX</p>
@@ -193,17 +194,6 @@
     </footer>
     </div>
     
-
-
-
-
-
-
-
-
-
-
-
 
 
 
