--- a/01week/helloworld/index.html
+++ b/01week/helloworld/index.html
@@ -1,12 +1,24 @@
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="stylesheet" href="./css/style.css">
-    <title>Brandon Turner</title>
-</head>
-<body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+    <link rel="stylesheet" href="./css/style.css" />
+    <title>Hello World</title>
+  </head>
+  <body>
+    <header>
+      Hello World
+    </header>
+    <main>
+      hello world
+    </main>
+    <article>
+      Hello World
+    </article>
+    <aside>Hello World</aside>
     <h1>Hello World</h1>
-</body>
+    <h2>Hello World</h2>
+    <footer>Hello World</footer>
+  </body>
 </html>
