--- a/01week/resume/index.html
+++ b/01week/resume/index.html
@@ -1,11 +1,18 @@
-<html lang="en">
-
+<!DOCTYPE html>
+<html>
 <head>
-
+  <meta charset="utf-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <title>My Resume</title>
-  <link rel="stylesheet" href="css/reset.css">
-  <link rel="stylesheet" href="./CSS/style.css">
-</head>
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="stylesheet" type="text/css" media="screen" href="main.css">
+  <script src="main.js"></script>
+</html>
+  <head>
+    <title>My Resume</title>
+    <link rel="stylesheet" href="css/reset.css">
+    <link rel="stylesheet" href="./CSS/style.css">
+  </head>
 
 <body>
   <header>
@@ -13,12 +20,12 @@
     <p>512-635-6709</p>
     <p>brandontheturner@gmail.com</p>
   </header>
-  <div class="background">
-    <main>
-      <h1>Objective</h1>
-      <p>Utilize my 15 years of management experience to transition into a successful career as a web developer with a
+    <div class="background">
+      <main>
+        <h1>Objective</h1>
+        <p>Utilize my 15 years of management experience to transition into a successful career as a web developer with a
         company that values pride, teamwork, and education.</p>
-    </main>
+      </main>
     </div>
 
     <section>
