--- a/index.html
+++ b/index.html
@@ -1,10 +1,76 @@
 <!DOCTYPE html>
-<html>
-  <head>
-    <meta charset="utf-8">
-    <title></title>
-  </head>
-  <body>
-    <h1>Hello world!</h1>
-  </body>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link rel="stylesheet" href="css/style.css">
+    <title>Checkpoint 2</title>
+</head>
+<body>
+    <div id="container">
+            <header class="name">
+                <h1>
+                    Katie Ricks
+                </h1>
+                <h2 class="job">
+                    Web Developer
+                </h2>
+        </header>
+        <main class="flex-container">
+                <article class="flexitem">
+                    <h2>Contact</h2>
+                    <p>katiericks9@yahoo.com</p>
+                    <p>www.linkedin.com/in/katiericksn/</p>
+                </article> 
+                <article class="flexitem">
+                    <h2>About</h2>
+                    <p>Austin, TX is home. Looking to grow my experiences in the developer world. Will try my hat at anything. </p>
+                </article>
+                <article class="flexitem">
+                    <h2>Work</h2>
+                    <h1 class="Oracle">MO</h1>
+    
+                    <h3 class="position">I feel that there is nothing more truly artistic than to love people.</h3>
+                    <p>-vincent van gogh</p>
+                </article>
+                <article class="flexitem">
+                    <h1 class="Oracle">Currently @ Oracle</h1>
+                    <h3 class="position">Account Manager growing startups in Minneapolis. Core Tech.
+                        
+                        <b>
+
+                        </b> #byebyeaws
+
+                        </h3>
+                    <p>-larry ellison</p>
+                    </article>
+                <article class="flexitem">
+                    <h1 class="Oracle">Legislative Aid</h1>
+                    <h3 class="position">Spring 2015</h3>
+                    <p>• Bill research</p>
+                    <p>• Constituent Aid</p>
+                    <p>• Campaign Analyticss</p>
+                </article>
+                <div class="Skills">
+                    <div class="box1">
+                            <h1 class="Oracle">Technologies</h1>
+                            <p>Microsoft suite</p>
+                            <p>Illustrator</p>
+                            <p>Afterlight</p>
+                    </div>
+                    <div class="box2">
+                        <h1 class="Oracle">Languages/Web</h1>
+                        <p>HTML/CSS</p>
+                        <p>JavaScript</p>
+                        <p>SQL</p>
+                    </div>
+                    <div class="box3">
+                        210-385-2498
+                    </div>
+                </div>
+            </main>
+    </div>
+
+</body>
 </html>
