--- a/07week/dom-practice/index.html
+++ b/07week/dom-practice/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta charset="utf-8">
+    <title>Shopping Cart</title>
     <link rel="stylesheet" href="./css/style.css">
     <link href="https://fonts.googleapis.com/css?family=Nanum+Gothic|Work+Sans:200|Amatic+SC" rel="stylesheet">
 </head>
