--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -1,33 +1,47 @@
 <!DOCTYPE html>
 <html>
-<head>
+  <head>
     <meta charset="utf-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <title>Ron Hajewski Project Portfolio</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="css/reset.css">
-    <link rel="stylesheet" type="text/css" media="screen" href="css/style.css" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <link rel="stylesheet" href="css/reset.css" />
+    <link
+      rel="stylesheet"
+      type="text/css"
+      media="screen"
+      href="css/style.css"
+    />
     <script src="main.js"></script>
-    <link href="https://fonts.googleapis.com/css?family=VT323" rel="stylesheet">
-    </head>    
+    <link
+      href="https://fonts.googleapis.com/css?family=VT323"
+      rel="stylesheet"
+    />
+  </head>
 
   <body>
-    <header> <!-- header with hoover links -->
+    <header>
+      <!-- header with hoover links -->
       <a class="logo" href="#"><p>Ron</p></a>
       <a href="#"><p>Home</p></a>
       <a href="#"><p>About</p></a>
       <a href="#"><p>Projects</p></a>
       <a href="#"><p>Contact</p></a>
     </header>
-    <div class="container"> <!-- many many boxes make up this page with css grid -->
+    <div class="container">
+      <!-- many many boxes make up this page with css grid -->
       <div class="box box1"></div>
       <div class="box box2"></div>
       <div class="box box3"></div>
       <div class="box box4"></div>
       <div class="box box5"></div>
       <div class="box box6"></div>
-      <div class="box box7"><p>RON HAJEWSKI:</p><p>Web Developer</p></div>
-      <div class="box box8"> <!-- grids inside grids (all for fun!) -->
+      <div class="box box7">
+        <p>RON HAJEWSKI:</p>
+        <p>Web Developer</p>
+      </div>
+      <div class="box box8">
+        <!-- grids inside grids (all for fun!) -->
         <div class="dot dot1"></div>
         <div class="dot dot2"></div>
         <div class="dot dot3"></div>
@@ -45,7 +59,8 @@
         <div class="dot dot15"></div>
         <div class="dot dot16"></div>
       </div>
-      <div class="box box9"> <!-- even more grids inside grids for even more fun! -->
+      <div class="box box9">
+        <!-- even more grids inside grids for even more fun! -->
         <div class="dot dot1"></div>
         <div class="dot dot2"></div>
         <div class="dot dot3"></div>
@@ -112,22 +127,46 @@
         <div class="dot dot64"></div>
       </div>
       <div class="box box10"></div>
-      <div class="box box11"><p>I ♥ HTML</p></div> <!-- animated hover banner -->
+      <div class="box box11"><p>I ♥ HTML</p></div>
+      <!-- animated hover banner -->
       <div class="box box12"></div>
-      <div class="box box13"><p>Hi, my name is Ron. I'm a full-stack web developer student at Austin Coding Academy. I love building web sites with HTML5, CSS3 and JavaScript. I am available for both freelance and long term projects. Use the contact link to get in touch. </p>
-        <a class="bigcontact" href="https://konarie1990.github.io/web-workbook/09week/customer-satisfaction/index.html">Contact</a>
+      <div class="box box13">
+        <p>
+          Hi, my name is Ron. I studied Full-Stack Web Development at Austin
+          Coding Academy. Some of the technologies I have worked with are HTML,
+          CSS, JavaScript, React, Redux, Node.js, Express.js and MongoDB.
+        </p>
+        <a
+          class="bigcontact"
+          href="https://konarie1990.github.io/web-workbook/09week/customer-satisfaction/index.html"
+          >Contact</a
+        >
       </div>
-      <div class="box box14"><p>CSS IS FUN!</p></div> <!-- another animated hover banner -->
+      <div class="box box14"><p>CSS IS FUN!</p></div>
+      <!-- another animated hover banner -->
       <div class="box box15"></div>
       <div class="box box16"></div>
       <div class="box box17"></div>
-      <div class="box box18 "><p>ABOUT ME</p></div> <!-- animated hover banner/title -->
+      <div class="box box18 "><p>ABOUT ME</p></div>
+      <!-- animated hover banner/title -->
       <div class="box box19"></div>
       <div class="box box20"></div>
       <div class="box box21"></div>
       <div class="box box22"></div>
       <div class="box box23"></div>
-      <div class="box box24"><p>My experience as a solution consultant and account manager has helped me develop excellent communication skills. I have experience working with many different types of companies- from fortune 100 enterprises to small agile startups.</p><p>If you are looking for that special someone with the unique combination of expertise in both account management and web development, look no further!</p></div>
+      <div class="box box24">
+        <p>
+          My experience as a solution consultant and account manager has helped
+          me develop excellent communication skills. I have experience working
+          with many different types of companies- from fortune 100 enterprises
+          to small agile startups.
+        </p>
+        <p>
+          If you are looking for that special someone with the unique
+          combination of expertise in both account management and web
+          development, look no further!
+        </p>
+      </div>
       <div class="box box25"></div>
       <div class="box box26"></div>
       <div class="box box27"></div>
@@ -135,33 +174,101 @@
       <div class="box box29"></div>
       <div class="box box30"></div>
       <div class="box box31"></div>
-      <div class="box box32"><p>PROJECTS</p></div> <!-- animated hover banner/title -->
-      <div class="box box33"><p>I really like to build cool stuff- from eurorack synthesizers to coding my own software plugins. Much of my development experience comes from self teaching. As a student of Austin Coding Academy I now have a portfolio that reflects my ability to follow my passion in a professional environment.</p></div>
+      <div class="box box32"><p>PROJECTS</p></div>
+      <!-- animated hover banner/title -->
+      <div class="box box33">
+        <p>
+          You can find several examples of my work at the links below - from Web
+          Development to my personal Audio/Visual project with Konarie. If you
+          see something you would like to discuss, I'm happy to sync up and
+          share details!
+        </p>
+      </div>
       <div class="box box34"></div>
       <div class="box box35"></div>
       <div class="box port box36"></div>
-      <div class="box port box37"><a href="https://konarie1990.github.io/web-workbook/01week/resume/index.html"><p>RESUME</p></a></div> <!-- blinky link box -->
-      <div class="box port box38"><a href="https://konarie1990.github.io/web-workbook/08week/dom-events/index.html"><p>DOM EVENTS</p></a></div> <!-- blinky link box -->
-      <div class="box port box39"><a href="https://konarie1990.github.io/web-workbook/02week/blog/index.html"><p>BLOG</p></a></div> <!-- blinky link box -->
-      <div class="box port box40"><a href="https://konarie1990.github.io/checkpoint1/index.html"><p>RETAIL WEB</p></a></div> <!-- blinky link box -->
+      <div class="box port box37">
+        <a href="https://guarded-garden-83374.herokuapp.com/"
+          ><p>FULL-STACK LOGIN</p></a
+        >
+      </div>
+      <!-- blinky link box -->
+      <div class="box port box38">
+        <a
+          href="https://konarie1990.github.io/web-workbook/08week/dom-events/index.html"
+          ><p>DOM EVENTS</p></a
+        >
+      </div>
+      <!-- blinky link box -->
+      <div class="box port box39">
+        <a
+          href="https://konarie1990.github.io/web-workbook/02week/blog/index.html"
+          ><p>BLOG</p></a
+        >
+      </div>
+      <!-- blinky link box -->
+      <div class="box port box40">
+        <a href="https://konarie1990.github.io/checkpoint1/index.html"
+          ><p>RETAIL WEB</p></a
+        >
+      </div>
+      <!-- blinky link box -->
       <div class="box port box41"></div>
       <div class="box box42"></div>
-      <div class="box port box43"><a href="https://konarie1990.github.io/web-workbook/05week/transitions-and-transformations/index.html"><p>TRANSITIONS</p></a></div> <!-- blinky link box -->
-      <div class="box port box44"><a href="https://konarie1990.github.io/web-workbook/02week/bio/index.html"><p>BIO</p></a></div> <!-- blinky link box -->
-      <div class="box port box45"><a href="https://konarie1990.github.io/web-workbook/04week/welcome-to-our-site/index.html"><p>RESPONSIVE</p></a></div> <!-- blinky link box -->
-      <div class="box port box46"><a href="https://konarie1990.github.io/web-workbook/08week/tic-tac-toe/index.html"><p>TIC-TAC-TOE</p></a></div> <!-- blinky link box -->
+      <div class="box port box43">
+        <a
+          href="https://konarie1990.github.io/web-workbook/05week/transitions-and-transformations/index.html"
+          ><p>TRANSITIONS</p></a
+        >
+      </div>
+      <!-- blinky link box -->
+      <div class="box port box44">
+        <a href="https://www.konarie.com/"><p>KONARIE</p></a>
+      </div>
+      <!-- blinky link box -->
+      <div class="box port box45">
+        <a
+          href="https://konarie1990.github.io/web-workbook/04week/welcome-to-our-site/index.html"
+          ><p>RESPONSIVE</p></a
+        >
+      </div>
+      <!-- blinky link box -->
+      <div class="box port box46">
+        <a
+          href="https://konarie1990.github.io/web-workbook/08week/tic-tac-toe/index.html"
+          ><p>TIC-TAC-TOE</p></a
+        >
+      </div>
+      <!-- blinky link box -->
       <div class="box port box47"></div>
       <div class="box box48"></div>
-      <div class="box port box49"><a href="https://konarie1990.github.io/web-workbook/09week/towers-of-hanoi/index.html"><p>TOWERS OF HANOI</p></a></div> <!-- blinky link box -->
-      <div class="box port box50"><a href="https://konarie1990.github.io/web-workbook/checkpoint-3/index.html"><p>PLAY!</p></a></div> <!-- blinky link box -->
+      <div class="box port box49">
+        <a
+          href="https://konarie1990.github.io/web-workbook/09week/towers-of-hanoi/index.html"
+          ><p>TOWERS OF HANOI</p></a
+        >
+      </div>
+      <!-- blinky link box -->
+      <div class="box port box50">
+        <a
+          href="https://konarie1990.github.io/web-workbook/checkpoint-3/index.html"
+          ><p>PLAY!</p></a
+        >
+      </div>
+      <!-- blinky link box -->
       <div class="box box51"></div>
       <div class="box box52"></div>
       <div class="box box53"></div>
-      <div class="box box54"><p>CONTACT</p></div> <!-- contact box with data entry -->
+      <div class="box box54"><p>CONTACT</p></div>
+      <!-- contact box with data entry -->
       <div class="box box55">
         <p>Contact Me:</p>
-        <a class="bigcontact" href="https://konarie1990.github.io/web-workbook/09week/customer-satisfaction/index.html">Contact</a>
-      </div>  
+        <a
+          class="bigcontact"
+          href="https://konarie1990.github.io/web-workbook/09week/customer-satisfaction/index.html"
+          >Contact</a
+        >
+      </div>
       <div class="box box56"></div>
       <div class="box box57"></div>
       <div class="box box58"></div>
@@ -171,11 +278,16 @@
       <div class="box box62"></div>
       <div class="box box63"></div>
       <!-- footer box -->
-      <div class="box box64"><p>&copy; 2018 Ron Hajewski - This is a work in progress ;)</p></div>
+      <div class="box box64">
+        <p>&copy; 2018 Ron Hajewski - This is a work in progress ;)</p>
+      </div>
       <div class=""></div>
     </div>
-  
-  <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.0.0-alpha1/jquery.min.js"></script>
-  <script src="./script.js"></script>
-</body>
+
+    <script
+      type="text/javascript"
+      src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.0.0-alpha1/jquery.min.js"
+    ></script>
+    <script src="./script.js"></script>
+  </body>
 </html>
