--- a/06week/Checkpoint2/index.html
+++ b/06week/Checkpoint2/index.html
@@ -1,63 +1,69 @@
 <html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+    <title>Brandon Portfolio</title>
+    <link rel="stylesheet" href="./css/reset.css" />
+    <link rel="stylesheet" href="./css/style.css" />
+    <link
+      href="https://fonts.googleapis.com/css?family=Charmonman|Lobster"
+      rel="stylesheet"
+    />
+  </head>
 
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Brandon Portfolio</title>
-  <link rel="stylesheet" href="./css/reset.css">
-  <link rel="stylesheet" href="./css/style.css">
-  <link href="https://fonts.googleapis.com/css?family=Charmonman|Lobster" rel="stylesheet">
-</head>
-
-<body>
-  <!--Main Container -->
-  <div class="container">
-    <!--My initials with different font and a circle border around it-->
-    <div class="header">
-      <div class="initials">BT</div>
-    </div>
-
-    <!--Hero Box containing name and title centered on page with a shadow border-->
-    <div class="hero">
-      <h1>Brandon Turner</h1>
-      <h1>Web Developer</h1>
-    </div>
-
-    <div class="contact">
-      <form>
-        <h1>Contact Me</h1>
-        <!--footer containing text boxes-->
-        <label class="email">Email:
-          <input type="email">
-        </label>
-        <label message="message">Messages
-          <textarea name="" id="message"></textarea>
-        </label>
-        <button class="button">SUBMIT</button>
-      </form>
-    </div>
-
-    <p class="copyright">Brandon Turner, 2018</p>
-
-    <div class="bottom-hero">
-
-      <h1 class="title">Objective</h1>
-
-      <div class="objective">
-        Utilize my 15 years of management experience to transition into a successful career as a web developer with a
-        company that values pride, teamwork, and education.</div>
-
-      <div class="experience">HTML5, CSS3, JavaScript, jQuery, WordPress, Git, Wireframing.
-        10 years in the role of restaurant management with an emphasis on financial reporting, inventory procedures,
-        sales growth, education, and team building.
+  <body>
+    <!--Main Container -->
+    <div class="container">
+      <!--My initials with different font and a circle border around it-->
+      <div class="header">
+        <div class="hero">
+          <h1>Brandon Turner - Web Developer</h1>
+        </div>
+        <nav>
+          <ul>
+            <li>blank</li>
+            <li>blank2</li>
+            <li>blank3</li>
+            <li>blank3</li>
+            <li>blank3</li>
+          </ul>
+        </nav>
       </div>
 
+      <!--Hero Box containing name and title centered on page with a shadow border-->
+
+      <div class="bottom-hero">
+        <h1 class="title">Objective</h1>
+
+        <div class="objective">
+          Utilize my 15 years of management experience to transition into a
+          successful career as a web developer with a company that values pride,
+          teamwork, and education.
+        </div>
+
+        <div class="experience">
+          HTML5, CSS3, JavaScript, jQuery, WordPress, Git, Wireframing. 10 years
+          in the role of restaurant management with an emphasis on financial
+          reporting, inventory procedures, sales growth, education, and team
+          building.
+        </div>
+      </div>
+
+      <div class="footer">
+        <div class="contact">
+          <h1>Contact Me</h1>
+          <!--footer containing text boxes-->
+          <!-- update this to my information, links to sites/ github -->
+        </div>
+
+        <div class="copyright">
+          &copy;
+          <script>
+            document.write(new Date().getFullYear());</script
+          >, Brandon Turner
+        </div>
+      </div>
     </div>
-
-
-
-  </div>
-</body>
-
+  </body>
 </html>
