--- a/06week/Checkpoint2/index.html
+++ b/06week/Checkpoint2/index.html
@@ -13,27 +13,46 @@
   </head>
 
   <body>
+    <div id="particles-js"></div>
+    <script src="particles.js"></script>
     <!--Main Container -->
     <div class="container">
       <!--My initials with different font and a circle border around it-->
       <div class="header">
-        <div class="hero">
-          <h1>Brandon Turner - Web Developer</h1>
+        <div class="top">
+          <h1>
+            Brandon Turner - <strong><bold>Web Developer</bold></strong>
+          </h1>
         </div>
         <nav>
           <ul>
-            <li>blank</li>
-            <li>blank2</li>
-            <li>blank3</li>
-            <li>blank3</li>
-            <li>blank3</li>
+            <li>
+              <a href="https://github.com/Brandontheturner?tab=repositories"
+                >GitHub</a
+              >
+            </li>
+            <li>
+              <a href="https://linkedin.com/in/brandonturner83">LinkedIn</a>
+            </li>
+            <li>
+              <a href="https://brandontheturner.github.io/BrandonTurner.pdf"
+                >Resume</a
+              >
+            </li>
+            <li>Email</li>
+            <li>
+              <a
+                href="https://github.com/Brandontheturner/web-workbook/blob/gh-pages/index.html"
+                >Portfolio</a
+              >
+            </li>
           </ul>
         </nav>
       </div>
 
       <!--Hero Box containing name and title centered on page with a shadow border-->
 
-      <div class="bottom-hero">
+      <div class="middle">
         <h1 class="title">Objective</h1>
 
         <div class="objective">
