--- a/index.html
+++ b/index.html
@@ -7,16 +7,15 @@
   </head>
 
   <body>
-    <header>
-      <h1>Web Workbook Landing Page</h1>
-    </header>
+    <div class="header">
+      <h1>Project Portfolio</h1>
+    </div>
 
     <div class="main">
       <main>
         <ul>
-          <li><a href="./01week/helloworld/index.html">hello world</a></li>
-
-          <li><a href="./01week/resume/index.html">resume</a></li>
+          <li><a href="./01week/helloworld/index.html">Hello World</a></li>
+          <li><a href="./01week/resume/index.html">Resume</a></li>
 
           <li><a href="./02week/blog/index.html">Blog</a></li>
 
@@ -37,10 +36,12 @@
           </li>
 
           <li>
-            <a href="./05week/transitions-and-transformations/index.html"></a>
+            <a href="./05week/transitions-and-transformations/index.html"
+              >Transitions-&-Transformations</a
+            >
           </li>
 
-          <li><a href="./05week/travel-gram/index.html"></a></li>
+          <li><a href="./05week/travel-gram/index.html">Travel-Gram</a></li>
 
           <li><a href="./06week/Checkpoint2/index.html">Checkpoint2</a></li>
 
