--- a/01week/helloworld/index.html
+++ b/01week/helloworld/index.html
@@ -6,7 +6,8 @@
   <title>Event Brite</title>
 </head>
 <body>
-  <h1>Hello World!</h1>
+  <h1>event britet</h1>
   
+<script src="./script.js"></script>
 </body>
 </html>
