--- a/01week/helloworld/index.html
+++ b/01week/helloworld/index.html
@@ -6,8 +6,9 @@
   <title>Event Brite</title>
 </head>
 <body>
-  <h1>event britet</h1>
-  
+  <h1>event brite amber</h1>
+  <button onclick="eventBrite()">click</button>
+  <!-- <a href="https://www.eventbrite.com/oauth/authorize?">click</a> -->
 <script src="./script.js"></script>
 </body>
 </html>
