fixed clinique ul

--- a/01week/resume/index.html
+++ b/01week/resume/index.html
@@ -40,11 +40,11 @@
           <a href="https://www.clinique.com/">Clinique Labs.</a>
           <ol>
               <li>
-                Developed maximum productivity and revenue through staff development and sales. </li>
+                Directed recruitment/training/ and staff development. </li>
               <li>
-                Administered daily operations to ensure a positive work environment.</li>
+                Cultivated strong business relations with customers.</li>
               <li>
-                Oversaw opening and closing of operations including inventory control.</li>
+                Planned and executed floor merchandising initiatives.</li>
             </ol>
     
       </div>
