--- a/01week/resume/index.html
+++ b/01week/resume/index.html
@@ -1,97 +1,24 @@
 <html lang="en">
-
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <meta name="viewport" content="width=device-width,initial-scale=1,maximum-scale=1,user-scalable=no">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-  <meta name="HandheldFriendly" content="true">
-  <link rel="stylesheet" href="../../01week/resume/css/style.css">
-  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css" integrity="sha384-UHRtZLI+pbxtHCWp1t77Bi1L4ZtiqrqD80Kn4Z8NTSRyMA2Fd33n5dQ8lWUE00s/" crossorigin="anonymous">
-
-  <title>Amber Jones Resume</title>
-
+  <link rel="stylesheet" href="./css/main.css">
+  <title>Amber Jones</title>
 </head>
 <body>
-  <div id="grid-wrapper">
-    <header>
-      <div class="header">
-      <p class="header">Amber Jones</p>
-      <p class="phoneNumber">(210) 429-6474</p>
-      </header>
-    </header>
-    <aside>
-      <div class="aside">
-          <i class="fas fa-building"></i>
-        <h3>Work History</h3>
-        <br>
-        <a href="http://www.paradiselawn.net/" class="paradise">Paradise Lawn and Maintenance</a>
-        <ol>
-            <li>
-              Developed maximum productivity and revenue through staff development and sales.
-             </li>
-            <li>
-              Administered daily operations to ensure a positive work environment.</li>
-            <li>
-              Oversaw opening and closing of operations including inventory control.
-            </li>
-          </ol>
-          <a href="https://www.clinique.com/">Clinique Labs.</a>
-          <ol>
-              <li>
-                Directed recruitment/training/ and staff development. </li>
-              <li>
-                Cultivated strong business relations with customers.</li>
-              <li>
-                Planned and executed floor merchandising initiatives.</li>
-            </ol>
-    
-      </div>
-    </aside>
-    <article>
-      <div class="article">
-          <i class="fas fa-chalkboard-teacher"></i>
-          <h3>Education</h3>
-          <ol>
-            <li>
-              <em>Austin Coding Academy</em><br>
-              <span>Predicted Graduation 2019</span>
-            </li>
-              <li>
-                  <em> Kaplan College 
-                  </em>
-                  <span>
-                 Graduated 2010 <br> Registered Dental Assistant
-                </span>
-                </li>
-              <li>
-                <em>  University of the Incarnate Word</em> <br> 
-                <span>Biology
-                2005-2007 
-                </span>
-              </li>
-
-              <li>
-                <em>James Madison High School
-                  </em> <br>
-                  <span> Accredited Graduation 2005
-                  </span>
-                  </li>
-            </ol>
-            <img src="http://pngimg.com/uploads/apple_logo/apple_logo_PNG19681.png" alt="" class="article">
-      </div>
-    </article>
-    <footer>
-      <div class="textarea">
-      Email:
-      <textarea name="email" id="" cols="1" rows="3">amberlovescats14@gmail.com</textarea>
-      <button>Submit</button>
-      </div>
-      <div class="image">
-      <img src="./Screen Shot 2018-11-17 at 7.35.39 PM.png" alt="" class="footer">
-      </div>
-    </footer>
+  <div id="root">
+   <div class="wrapper-top">
+  <div id="left-top">
+    <div class="left-top"></div>
+    <div class="left-bottom"></div>
   </div>
+  <div id="right-top"></div>
+</div>
+  <div id="bottom"></div>
+</div>
+
+
+  
 </body>
 </html>
