--- a/01week/resume/index.html
+++ b/01week/resume/index.html
@@ -1,24 +1,54 @@
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <link rel="stylesheet" href="./css/main.css">
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
+    integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
   <title>Amber Jones</title>
 </head>
+
 <body>
   <div id="root">
-   <div class="wrapper-top">
-  <div id="left-top">
-    <div class="left-top"></div>
-    <div class="left-bottom"></div>
+    <div class="wrapper-top">
+      <div id="left-top">
+        <div class="left-top">
+          <div class="container">
+            <p class="aboutMe-head">-About Me -</p>
+            <hr>
+            <p class="aboutMe">I attended school in Austin, TX and am a residant of San Antonio. I put service before self and believe that honesty and loyalty make for a desirable work enviroment. I strive to always have integrity in my work and love to learn new innovative technology.</p>
+            <p class="education-header">-Education-</p>
+            <hr>
+            <ul class="education" style="list-style: none">
+              <li>Austin Coding Academy 2018-2019</li>
+              <li>University Of The Incarnate Word</li>
+            </ul>
+          </div>
+        </div>
+        <div class="left-bottom">
+          <div class="container">
+            <p class="name text-center">Amber Jones</p>
+            <p class="fswd text-center">Full Stack JavaScript Developer</p>
+            <p class="contact text-center">me@amberjones.dev
+              <br> (210) 429-6474
+            </p>
+
+          </div>
+        </div>
+      </div>
+      <div id="right-top"></div>
+    </div>
+    <div id="bottom"></div>
   </div>
-  <div id="right-top"></div>
-</div>
-  <div id="bottom"></div>
-</div>
 
 
-  
+
+
+  <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
+<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
 </body>
+
 </html>
