top half mobile

--- a/01week/resume/index.html
+++ b/01week/resume/index.html
@@ -5,8 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <link rel="stylesheet" href="./css/main.css">
-  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
-    integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+    <script src="https://kit.fontawesome.com/ca2faa0508.js"></script>
   <title>Amber Jones</title>
 </head>
 
@@ -18,29 +17,50 @@
           <div class="container">
             <p class="aboutMe-head">-About Me -</p>
             <hr>
-            <p class="aboutMe">I attended school in Austin, TX and am a residant of San Antonio. I put service before self and believe that honesty and loyalty make for a desirable work enviroment. I strive to always have integrity in my work and love to learn new innovative technology.</p>
+            <p class="aboutMe">I attended school in Austin, TX and am a resident of San Antonio. I put service before self and believe that honesty and loyalty make for a desirable work enviroment. I strive to always have integrity in my work and love to learn new innovative technology.</p>
             <p class="education-header">-Education-</p>
             <hr>
             <ul class="education" style="list-style: none">
-              <li>Austin Coding Academy 2018-2019</li>
-              <li>University Of The Incarnate Word</li>
+              <li>* Austin Coding Academy </li>
+              <li>* University Of The Incarnate Word</li>
             </ul>
           </div>
         </div>
         <div class="left-bottom">
           <div class="container">
             <p class="name text-center">Amber Jones</p>
-            <p class="fswd text-center">Full Stack JavaScript Developer</p>
-            <p class="contact text-center">me@amberjones.dev
-              <br> (210) 429-6474
-            </p>
-
           </div>
         </div>
       </div>
-      <div id="right-top"></div>
+      <div id="right-top">
+        <div class="container">
+          <div class="contactContainer">
+            <p class="contact">Contact Info:</p>
+            <p class="contactInfo">
+              me@amberjones.dev
+              (210) 429-6474
+            </p>
+          </div>
+        <p class="interest text-center">Areas of Emphasis</p>
+        <hr>
+          <div class="icons">
+          HTML <i class="fab fa-html5"></i>
+          CSS <i class="fab fa-css3"></i>
+          SCSS <i class="fab fa-sass"></i>
+          BootStrap <i class="fab fa-bootstrap"></i>
+          JavaScript <i class="fab fa-js"></i>
+          Object Oriented Programing <i class="far fa-object-group"></i>
+          Node.js <i class="fab fa-node-js"></i>
+          React.js <i class="fab fa-react"></i>
+          REDUX MongoDB
+        </div>
+       
+      </div>
     </div>
-    <div id="bottom"></div>
+    </div>
+    <div id="bottom">
+      <div class="javascript">Full Stack JavaScript Developer</div>
+    </div>
   </div>
 
 
