--- a/01week/resume/index.html
+++ b/01week/resume/index.html
@@ -17,7 +17,7 @@
           <div class="container">
             <p class="aboutMe-head">-About Me -</p>
             <hr>
-            <p class="aboutMe">I attended school in Austin, TX and am a resident of San Antonio. I put service before self and believe that honesty and loyalty make for a desirable work enviroment. I strive to always have integrity in my work and love to learn new innovative technology.</p>
+            <p class="aboutMe">I attended school in Austin, TX and am a resident of San Antonio. I put service before self and believe that honesty and loyalty make for a desirable work environment. I strive to always have integrity in my work and love to learn new innovative technology.</p>
             <p class="education-header">-Education-</p>
             <hr>
             <ul class="education" style="list-style: none">
@@ -60,15 +60,42 @@
     </div>
     <div id="bottom">
       <div class="javascript">Full Stack JavaScript Developer</div>
+      <section id="experience-1">
+        <div class="experienceTitle">-Experience-</div>
+        <div class="one">
+          <p class="job">
+              <em> Paradise Lawn and Maintenance</em>
+          </p>
+          
+          <ul>
+            <li>Developed maximum productivity through QuickBooks Software.</li>
+            <li>Organized daily operations through spread sheets.</li>
+            <li>Maintained inventory control.</li>
+          </ul>
+        </div>
+        <div class="two">
+          <p class="job"><em>Clinique Labs.</em></p>
+          <ul>
+            <li>Cultivated strong relations through communications.</li>
+            <li>Directed training, recruitment and staff development</li>
+            <li>Executed sales through test driven plans.</li>
+          </ul>
+        </div>
+        <div class="three">
+          <p class="job">VK Orthodontics</p>
+          <ul>
+            <li>Analyzed data and prepared for audits.</li>
+            <li>Managed accounting records with Dentrix Software</li>
+            <li>Continuously obtained new knowledge in field.</li>
+          </ul>
+        </div>
+      </section>
     </div>
+    <p style="color: red; background: yellow; margin-bottom: 20px">
+      References upon request. Coded with HTML an SCSS.
+    </p>
   </div>
 
-
-
-
-  <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
-<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
 </body>
 
 </html>
