--- a/01week/resume/index.html
+++ b/01week/resume/index.html
@@ -48,7 +48,7 @@
           CSS <i class="fab fa-css3"></i>
           SCSS <i class="fab fa-sass"></i>
           BootStrap <i class="fab fa-bootstrap"></i>
-          JavaScript <i class="fab fa-js"></i>
+          JavaScript <i class="fab fa-js"></i> <br>
           Object Oriented Programing <i class="far fa-object-group"></i>
           Node.js <i class="fab fa-node-js"></i>
           React.js <i class="fab fa-react"></i>
@@ -60,6 +60,7 @@
     </div>
     <div id="bottom">
       <div class="javascript">Full Stack JavaScript Developer</div>
+      <div id="bottomWrapper">
       <section id="experience-1">
         <div class="experienceTitle">-Experience-</div>
         <div class="one">
@@ -90,6 +91,7 @@
           </ul>
         </div>
       </section>
+    </div>
     </div>
     <p style="color: red; background: yellow; margin-bottom: 20px">
       References upon request. Coded with HTML an SCSS.
