--- a/01week/resume/index.html
+++ b/01week/resume/index.html
@@ -17,7 +17,7 @@
           <div class="container">
             <p class="aboutMe-head">-About Me -</p>
             <hr>
-            <p class="aboutMe">I attended school in Austin, TX and am a resident of San Antonio. I put service before self and believe that honesty and loyalty make for a desirable work environment. I strive to always have integrity in my work and love to learn new innovative technology.</p>
+            <p class="aboutMe">I attended school in Austin, TX and I am a resident of San Antonio. My technical capability allows me to clearly communicate the process of my work. I have a love for continuing education and appreciate a strong community network.</p>
             <p class="education-header">-Education-</p>
             <hr>
             <ul class="education" style="list-style: none">
