--- a/01week/resume/index.html
+++ b/01week/resume/index.html
@@ -52,7 +52,7 @@
           Object Oriented Programing <i class="far fa-object-group"></i>
           Node.js <i class="fab fa-node-js"></i>
           React.js <i class="fab fa-react"></i>
-          REDUX MongoDB <br>
+          REDUX * MongoDB * MySQL<br>
           
         </div>
        
