--- a/01week/resume/index.html
+++ b/01week/resume/index.html
@@ -17,7 +17,7 @@
           <div class="container">
             <p class="aboutMe-head">-About Me -</p>
             <hr>
-            <p class="aboutMe">I attended school in Austin, TX and I am a resident of San Antonio. My technical capability allows me to clearly communicate the process of my work to a team. I have integrity in my work and am innovative with new technology.</p>
+            <p class="aboutMe">I attended school in Austin, TX and I am a resident of San Antonio. My technical capability allows me to clearly communicate my process to a team. I have integrity in my work and I am innovative with new evolving technology. Attention to details, is a great quality of mine and I am a motivated self starter in all aspects of my life.</p>
             <p class="education-header">-Education-</p>
             <hr>
             <ul class="education" style="list-style: none">
