--- a/01week/resume/index.html
+++ b/01week/resume/index.html
@@ -72,26 +72,28 @@
       <div class="links" 
       style="display: flex; justify-content: space-evenly">
         <h1 style="color: white">
-          <a href="https://www.linkedin.com/in/amber-jones-59a901124/">LinkedIn Profile</a>
+          <a href="https://www.linkedin.com/in/amber-jones-59a901124/">LinkedIn </a>
         </h1>
         <h1>
           <a href="https://github.com/amberlovescats14">GitHub</a>
         </h1>
         
       </div>
-      <div class="bottom-wrapper" style="display: flex">
+      <div class="bottom-wrapper" >
 
-        <div class="work1">
-       
-          <h3>Paradise Lawn and Maintenance</h3>
+        <div class="work1"
+        style="margin-bottom: 5px">
+          <h2
+          style="padding: 5px; text-decoration: underline">Work History: </h2>
+          <h3><em>1. Paradise Lawn and Maintenance</em></h3>
           <ul>
               <li>Developed maximum productivity through QuickBooks Software.</li>
               <li>Organized daily operations through spread sheets.</li>
               <li>Maintained inventory control.</li>
             </ul>
         </div>
-        <div class="work2">
-            <h3>Clinique Labs.</h3>
+        <div class="work2" style="margin-bottom: 5px">
+            <h3><em>2. Clinique Labs.</em></h3>
             <ul>
                 <li>Cultivated strong relations through communications.</li>
                 <li>Directed training, recruitment and staff development</li>
@@ -99,7 +101,7 @@
               </ul>
         </div>
         <div class="work3">
-            <h3 class="job">VK Orthodontics</h3>
+            <h3 ><em>3. VK Orthodontics</em></h3>
             <ul>
               <li>Analyzed data and prepared for audits.</li>
               <li>Managed accounting records with Dentrix Software</li>
