--- a/checkpoint-two/index.html
+++ b/checkpoint-two/index.html
@@ -12,9 +12,9 @@
 <body>
     <nav class="grid">
     <h4>Jim Schaefer</h4>
-    <img class="mybigdumbface" src="images/headshot.jpg" />
+    <img class="mybigdumbface" alt="headshot" src="images/headshot.jpg" />
     <div class="nav-wrapper">
-        <div class="nav-item"><a class="about active" href="./index.html">Home</a></div>
+        <div class="nav-item"><a class="about active" href="./index.html">Home</a></div> 
         <div class="nav-item"><a class="bio" href="./pages/bio.html">Bio Part 2</a></div>
         <div class="nav-item"><a class="resume" href="./pages/resume.html">Resume</a></div>
         <div class="nav-item"><a class="portfolio" href="./pages/portfolio.html">Portfolio</a></div>
